--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jade": "~1.11.0",
     "moment": "^2.22.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.1",
