--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "~1.13.2",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.3.5",
+    "d3-node": "^1.1.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
