--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "moment": "^2.22.0",
+    "moment": "^2.22.2",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.16.1",
+    "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.3",
     "@types/cookie-parser": "^1.3.30",
     "@types/debug": "^0.0.29",
     "@types/express": "^4.0.35",
@@ -25,21 +26,23 @@
     "@types/gulp-mocha": "^0.0.30",
     "@types/gulp-nodemon": "^0.0.30",
     "@types/marked": "^0.0.28",
-    "@types/mocha": "^2.2.40",
+    "@types/mocha": "^2.2.48",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.10",
-    "@types/power-assert": "^1.4.29",
+    "@types/node": "^7.0.65",
+    "@types/power-assert": "^1.5.0",
     "@types/serve-favicon": "^2.2.28",
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.24.4",
+    "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-less": "^3.3.0",
     "gulp-mocha": "^4.1.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-tsb": "^2.0.3",
     "marked": "^0.3.6",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.11.0",
-    "typescript": "^2.2.1"
+    "mocha": "^3.5.3",
+    "nodemon": "^1.17.5",
+    "ts-node": "^6.0.5",
+    "typescript": "^2.9.1"
   },
   "main": "src/index.ts",
   "repository": {
