--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "description": "levelup",
   "version": "0.0.1",
   "dependencies": {
+    "@types/sqlite3": "^3.1.3",
     "body-parser": "~1.13.2",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.3.5",
     "d3-node": "^1.1.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "growl": "^1.10.5",
     "hoek": "^4.2.1",
     "jade": "~1.11.0",
     "moment": "^2.22.2",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
+    "sqlite3": "^4.0.0",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
@@ -21,7 +24,7 @@
     "@types/chai": "^4.1.3",
     "@types/cookie-parser": "^1.3.30",
     "@types/debug": "^0.0.29",
-    "@types/express": "^4.0.35",
+    "@types/express": "^4.16.0",
     "@types/gulp": "^4.0.2",
     "@types/gulp-less": "^0.0.30",
     "@types/gulp-mocha": "^0.0.30",
@@ -42,7 +45,7 @@
     "marked": "^0.3.6",
     "mocha": "^3.5.3",
     "nodemon": "^1.17.5",
-    "ts-node": "^6.0.5",
+    "ts-node": "^6.1.0",
     "typescript": "^2.9.1"
   },
   "main": "src/index.ts",
